# django-azure-application-insights-sample

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.docker/: entrypoint.sh
.github/workflows/: build-and-push.yml  deploy.yml  lint.yml  push.yml
app/: .env.app_insights.example  .env.local  manage.py
app/config/: settings.py  urls.py  wsgi.py
iac/03_dev/: .tfvars.example  dj-webapp.tf  locals.tf  main.tf  variables.tf
iac/templates/dj-webapp/: application_insights.tf  rg.tf  variables.tf  web_app.tf
