[tool.poetry]
name = "dj-basic-setup"
version = "0.1.0"
description = "Basic Setup for Django Applications with Application Insights on Azure Webapp"
authors = ["JangasCodingplace <janisgoesser92@gmail.com>"]

[tool.black]
line-length = 100
exclude = "migrations/*"

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
mypy_path = "app"
disable_error_code = ["var-annotated", "attr-defined"]
exclude = ["migrations/*"]

[tool.ruff]
exclude = ["app/config/settings/__init__.py"]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.3"
django-auth-adfs = "^1.14.0"
gunicorn = "^23.0.0"
djangorestframework = "^3.15.2"
azure-monitor-opentelemetry = "^1.6.4"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pre-commit = "^4.0.1"
ruff = "^0.7.3"
mypy = "^1.13.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
